# newbie

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
backend/: Dockerfile  main.py  requirements.txt
backend/tests/: test_main.py
cypress/integration/: auth.spec.js
docs/: architecture.md  auth.md
e2e/: docker-compose.test.yml
frontend/: .eslintrc.js  Dockerfile  next.config.js  package.json  tsconfig.json
frontend/__tests__/: setup.test.ts
sentinelai/: __init__.py
sentinelai/client/: __init__.py
sentinelai/ml/: __init__.py
sentinelai/server/: __init__.py
src/: lib.rs
src/__tests__/components/auth/: LoginButton.test.js  ProtectedRoute.test.js
src/__tests__/lib/: auth0.test.js
src/components/auth/: LoginButton.js  LogoutButton.js  ProtectedRoute.js
src/crypto/: mod.rs  tests.rs
src/lib/: auth0.js
src/middleware/: auth.js
src/ml/: mod.rs  tests.rs
src/network/: mod.rs  tests.rs
src/telemetry/: mod.rs
tests/: __init__.py  conftest.py  lib_test.rs
