[package]
name = "jalen"
version = "0.1.0"
edition = "2021"
authors = ["Robo Romeski"]
description = "SentinelAI - Real-time anti-cheat detection system powered by AI"
license = "MIT"
repository = "https://github.com/sentinel-ai/jalen"

[lib]
name = "jalen"
path = "src/lib.rs"

[dependencies]
# ML/AI Dependencies
tract-onnx = "0.20"
ndarray = "0.15"

# Async Runtime & Networking
tokio = { version = "1.32", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
hyper = "0.14"
tower = "0.4"

# Cryptography & Security
ring = "0.17"
base64 = "0.21"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Configuration
config = "0.13"
dotenv = "0.15"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
mockall = "0.11"
criterion = "0.5"

[dev-dependencies]
tokio-test = "0.4"
test-case = "3.1"
proptest = "1.2"

[features]
default = ["ml", "network", "crypto"]
ml = []
network = []
crypto = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    "crates/*"
]